<resources>
    <string name="app_name">First Project</string>
    <string name="chars_name">Character Name</string>
    <string name="detail">Detail</string>
    <string name="view_list_char">View List Charcater</string>
    <string name="view_card_char">View Card Character</string>
    <string name="about_developer">About Developer</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
    <string name="about_name"><Name>Name</Name></string>
    <string name="farid"><Name>: Achmad Farid Alfa Waid</Name></string>
    <string name="about_email"><email>Email</email></string>
    <string name="email"><email>: Faridwaid01@gmail.com</email></string>
    <string name="about_status"><email>Status</email></string>
    <string name="status"><email>: College Student</email></string>
    <string name="about_dev">Hellooo</string>
    <string name="favorite_this_character">Favorite This Character!</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="rate">Rate:</string>
    <string name="check_detail_anime">Check Detail Anime!</string>
    <string name="like_this_anime">Like This Anime</string>
</resources>