<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="2"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="4dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/chars_name" />

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_item_photo"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:text="@string/rate" />

        <TextView
            android:id="@+id/tv_rate_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_rate"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/rate" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>