<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDevActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/farid"
            app:civ_border_color="#000"
            app:civ_border_width="2dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/about_name"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/farid"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/about_email"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/about_status"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/status"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Don't forget to follow my social media account"
            android:layout_gravity="center"
            android:background="@drawable/custom_button"
            android:textColor="#FFF"
            android:textSize="13sp"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/github"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/github"
                    app:civ_border_color="#000"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/instagram"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="12dp"
                    android:layout_gravity="center"
                    android:src="@drawable/instagram"
                    app:civ_border_color="#000"
                    app:civ_border_width="2dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/facebook"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook"
                    app:civ_border_color="#000"
                    app:civ_border_width="2dp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</ScrollView>