<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/black">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="About Developer"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="-125dp"
                android:src="@drawable/title" />

            <ScrollView
                android:layout_marginTop="120dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/farid"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:text="@string/about_name"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginLeft="13dp"
                        android:gravity="center"
                        android:text="@string/about_email"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginLeft="-42dp"
                        android:gravity="center"
                        android:text="@string/about_status"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/github"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="-260dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/github"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/instagram"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="-100dp"
                        android:src="@drawable/instagram"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/facebook"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="left"
                        android:layout_marginTop="-100dp"
                        android:layout_marginRight="-260dp"
                        android:layout_toRightOf="@id/instagram"
                        android:src="@drawable/facebook"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/custom_button"
                        android:text="Don't forget to follow my social media account"
                        android:textAllCaps="false"
                        android:textColor="#FFF"
                        android:textSize="13sp"></androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
</RelativeLayout>